--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,12 @@
 			<artifactId>jgraphx</artifactId>
 			<version>1.10.1.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
+
 	</dependencies>
 </project>
