--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.5</version>
 		</dependency>
+		
+		<dependency>
+     		<groupId>com.opencsv</groupId>
+     		<artifactId>opencsv</artifactId>
+     		<version>3.7</version>
+  		</dependency>
+		
 
 	</dependencies>
 </project>
