--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,12 @@
 			<artifactId>opencsv</artifactId>
 			<version>3.7</version>
 		</dependency>
-
+	
+		<dependency>
+    		<groupId>com.googlecode.json-simple</groupId>
+    		<artifactId>json-simple</artifactId>
+    		<version>1.1.1</version>
+		</dependency>
 
 	</dependencies>
 </project>
