--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 						</goals>
 						<configuration>
 							<headerType>gui</headerType>
-							<jar>${project.build.directory}/${artifactId}-${version}-shaded.jar</jar>
+							<jar>${project.build.directory}/${project.artifactId}-${version}-shaded.jar</jar>
 							<outfile>${project.build.directory}/darwin.exe</outfile>
 							<downloadUrl>https://marsonge.github.io/DArWIn/</downloadUrl>
 							<classPath>
@@ -109,17 +109,18 @@
 			<artifactId>jgraphx</artifactId>
 			<version>1.10.1.3</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.5</version>
 		</dependency>
-	
+
 		<dependency>
-    		<groupId>com.googlecode.json-simple</groupId>
-    		<artifactId>json-simple</artifactId>
-    		<version>1.1.1</version>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 	</dependencies>
