--- a/pom.xml
+++ b/pom.xml
@@ -103,11 +103,10 @@
 		</plugins>
 	</build>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/org.tinyjee.jgraphx/jgraphx -->
 		<dependency>
-			<groupId>org.tinyjee.jgraphx</groupId>
+			<groupId>com.github.monkeysintown</groupId>
 			<artifactId>jgraphx</artifactId>
-			<version>2.0.0.1</version>
+			<version>3.1.2.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
