--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>darwin</groupId>
 	<artifactId>darwin</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.7.0</version>
 	<name>DArWIn</name>
 	<description>Darwin: Artificial Wildlife Intelligence</description>
 
